# eWiLL

./: .dockerignore  LICENSE  README.md  docker-compose.yml  heroku.yml
.github/: CODEOWNERS
.github/workflows/: backendTest.yml  docker-image.yml  frontendTest.yml  node.js.yml
.jpb/: jpb-settings.xml
Dokumente/Models/: Diagram_v1.drawio  Diagram_v2.drawio  Diagram_v3.drawio  Diagram_v4.drawio  Test.drawio
eWiLL_backend/: docker-compose.yml  eWiLL_backend-openapi_6.yaml  openapi.yaml  pom.xml
eWiLL_backend/doc/: readme.md
eWiLL_checker/: Dockerfile  Hallo.txt  docker-compose.yml
eWiLL_frontend/: .eslintrc.cjs  .eslintrc.js  Dockerfile  default.conf  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
eWiLL_frontend/src/: App.vue  main.js  main.ts
eWiLL_frontend/src/assets/: _shared.scss  settings.scss  style.scss
eWiLL_frontend/src/components/: AnkerPoint.vue  CourseTask.vue  DropdownUserNav.vue  EditWidget.vue  Entity.vue  EntityMain.vue  EntityWidget.vue  FileExplorer.vue  Home.vue  IncomingAnkerPoint.vue  Line.vue  LineMain.vue  LineWidget.vue  ModalAddAttributes.vue  TaskList.vue  (+2 more)
modules/core/checker/demoService/: .pylintrc  Dockerfile  README.md  pyproject.toml
modules/core/checker/demoService/demoservice/: main.py
modules/core/checker/demoService/demoservice/config/: database.py
modules/core/checker/demoService/demoservice/models/: items.py
modules/core/checker/demoService/demoservice/routes/: route.py
modules/core/checker/demoService/demoservice/schema/: schemas.py
(+544 files in other folders)
